<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications_drawer_btn" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/verify_drawer_btn" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/edit_profile_drawer_btn" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_drawer_btn" />
    </group>
</menu>