<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.lowry.lapspace3.LoginActivity">

    <fragment
        android:name="com.lowry.lapspace3.FragmentProgressBar"
        android:id="@+id/progress_frag_login"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/log_login_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_white"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/radio_login_side_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/log_login_image_view"
        android:id="@+id/radio_user_type"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:text="@string/laptop_owner_string"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:text="@string/company_string"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <EditText
        android:layout_width="@dimen/login_et_width"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radio_user_type"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/email_login_hint"
        android:id="@+id/et_login_email"
        android:singleLine="false" />

    <EditText
        android:layout_width="@dimen/login_et_width"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_login_email"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/password_hint"
        android:layout_marginBottom="@dimen/login_elements_margin_botton"
        android:id="@+id/et_login_password"
        />

    <Button
        android:text="@string/login_button"
        android:layout_width="@dimen/login_et_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/my_button"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/login_btn_side_margin"
        android:layout_below="@id/et_login_password"
        android:id="@+id/btn_login"
        />


    <TextView
        android:text="@string/register_as_laptop_owner_button"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/login_btn_side_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="@dimen/text_view_link_text_size"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_login"
        android:id="@+id/tv_reg_link_ad"
        />

    <TextView
        android:clickable="true"
        android:text="@string/register_as_company_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/login_btn_side_margin"
        android:textStyle="bold"
        android:textSize="@dimen/text_view_link_text_size"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_reg_link_ad"
        android:id="@+id/tv_reg_link_co"
        />

</RelativeLayout>
