<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.lowry.lapspace3.EditProfileLapActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_lap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <fragment
        android:name="com.lowry.lapspace3.FragmentProgressBar"
        android:id="@+id/progress_frag_edit_lap"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_edit_lap"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:hint="name"
        android:ems="10"
        android:id="@+id/et_name_edit_lap" />


    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name_edit_lap"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="email"
        android:id="@+id/et_email_edit_lap" />

    <Spinner
        android:id="@+id/age_range_spinner_edit_lap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_upload_edit_lap"
            android:text="@string/upload_btn" />
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content"
            android:text="@string/no_file_uploaded_tv"
            android:id="@+id/uploaded_im_tv_edit_lap"/>
    </LinearLayout>

    <TextView
        android:text="@string/laptop_loc_question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_laptop_loc_edit_lap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_laptop_loc_edit_lap"
        android:hint="location" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="occupation"
        android:id="@+id/et_occupation_edit_lap" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="address line 1"
        android:id="@+id/et_address_line1_edit_lap" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="address line 2 (optional)"
        android:id="@+id/et_address_line2_edit_lap" />
    <Spinner
        android:id="@+id/county_spinner_edit_lap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/btn_edit_lap" />

</LinearLayout>
