<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.lowry.lapspace3.RegisterLapActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_reg_lap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <fragment
        android:name="com.lowry.lapspace3.FragmentProgressBar"
        android:id="@+id/progress_frag_register_lap"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_reg_lap"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/et_name" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Email"
        android:id="@+id/et_email" />


    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/et_email"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Password"
        android:id="@+id/et_password" />

    <Spinner
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:id="@+id/age_range_spinner"
        android:layout_marginBottom="3dp"
        android:layout_below="@id/et_password"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_below="@id/age_range_spinner"
        android:id="@id/lin_layout"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_upload"
            android:layout_centerHorizontal="true"
            android:background="@drawable/my_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/white"
            android:text="@string/upload_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/no_file_uploaded_tv"
            android:id="@+id/uploaded_im_tv"/>
    </LinearLayout>

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="6dp"
        android:text="@string/laptop_loc_question_tv"
        android:layout_width="wrap_content"
        android:layout_below="@id/lin_layout"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/textview_laptop_loc" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_laptop_loc"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_laptop_loc"
        android:hint="Location" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_laptop_loc"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Occupation"
        android:id="@+id/et_occupation" />

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_occupation"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Address Line 1"
        android:id="@+id/et_address_line1" />
    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_address_line1"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Address Line 2 (optional)"
        android:id="@+id/et_address_line2" />
    <Spinner
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/et_address_line2"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/county_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/reg_lap_margin_bottom"
        android:layout_below="@id/county_spinner"
        android:textColorHint="@color/white"
        android:text="@string/register_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textStyle="bold"
        android:layout_height="@dimen/button_height"
        android:id="@+id/btn_register" />


</RelativeLayout>
